再度コミット

--- a/notebooks/local/L01_model_training.ipynb
+++ b/notebooks/local/L01_model_training.ipynb
@@ -23,9 +23,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 1,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "データパス: ../../data/processed/results.parquet\n"
+                    ]
+                }
+            ],
             "source": [
                 "import sys\n",
                 "from pathlib import Path\n",
@@ -46,9 +54,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "出走馬データ数: 780,849\n"
+                    ]
+                }
+            ],
             "source": [
                 "results_df = pd.read_parquet(RESULTS_PARQUET)\n",
                 "print(f\"出走馬データ数: {len(results_df):,}\")"
@@ -64,9 +80,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "データ数: 774,240\n"
+                    ]
+                }
+            ],
             "source": [
                 "results_df['race_date'] = pd.to_datetime(results_df['race_date'])\n",
                 "results_df['year'] = results_df['race_date'].dt.year\n",
@@ -86,9 +110,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 4,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "前走情報を計算中...\n",
+                        "完了\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 前走情報（shift で安全に取得）\n",
                 "print(\"前走情報を計算中...\")\n",
@@ -116,9 +149,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 5,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "馬の累積統計を計算中...\n",
+                        "完了\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 馬の累積統計（transformで同じ長さを保証）\n",
                 "print(\"馬の累積統計を計算中...\")\n",
@@ -141,9 +183,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 6,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "騎手・調教師の累積成績を計算中...\n",
+                        "完了\n"
+                    ]
+                }
+            ],
             "source": [
                 "# 騎手・調教師の累積成績\n",
                 "print(\"騎手・調教師の累積成績を計算中...\")\n",
@@ -184,9 +235,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 7,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Train: 726,082\n",
+                        "Test: 48,158\n"
+                    ]
+                }
+            ],
             "source": [
                 "TRAIN_END_YEAR = 2024\n",
                 "\n",
@@ -212,9 +272,18 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 8,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "オッズなし: 23個\n",
+                        "オッズあり: 25個\n"
+                    ]
+                }
+            ],
             "source": [
                 "import lightgbm as lgb\n",
                 "from sklearn.model_selection import train_test_split\n",
@@ -239,9 +308,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "Train: 726,082, Test: 48,158\n"
+                    ]
+                }
+            ],
             "source": [
                 "for col in FEATURE_COLS_WITH_ODDS:\n",
                 "    if col in train_df.columns:\n",
@@ -256,7 +333,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "metadata": {},
             "outputs": [],
             "source": [
@@ -336,18 +413,72 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "==================================================\n",
+                        "🎯 オッズなしモデル\n",
+                        "==================================================\n",
+                        "Training until validation scores don't improve for 50 rounds\n",
+                        "[100]\ttrain's auc: 0.753105\tvalid's auc: 0.748057\n",
+                        "[200]\ttrain's auc: 0.759272\tvalid's auc: 0.753302\n",
+                        "[300]\ttrain's auc: 0.762276\tvalid's auc: 0.75522\n",
+                        "[400]\ttrain's auc: 0.764345\tvalid's auc: 0.756053\n",
+                        "[500]\ttrain's auc: 0.766099\tvalid's auc: 0.756573\n",
+                        "[600]\ttrain's auc: 0.767594\tvalid's auc: 0.756922\n",
+                        "[700]\ttrain's auc: 0.768968\tvalid's auc: 0.757182\n",
+                        "[800]\ttrain's auc: 0.770364\tvalid's auc: 0.757413\n",
+                        "[900]\ttrain's auc: 0.771696\tvalid's auc: 0.75749\n",
+                        "[1000]\ttrain's auc: 0.77292\tvalid's auc: 0.757611\n",
+                        "Did not meet early stopping. Best iteration is:\n",
+                        "[1000]\ttrain's auc: 0.77292\tvalid's auc: 0.757611\n",
+                        "\n",
+                        "📊 Test AUC: 0.7600\n",
+                        "🎯 上位3頭的中率: 89.2%\n",
+                        "💰 単勝回収率: 78.9%\n",
+                        "🏇 三連複的中率（5頭選択）: 28.2%\n"
+                    ]
+                }
+            ],
             "source": [
                 "result_no_odds = train_and_evaluate(train_clean, test_clean, FEATURE_COLS_NO_ODDS, \"オッズなしモデル\")"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "==================================================\n",
+                        "🎯 オッズありモデル\n",
+                        "==================================================\n",
+                        "Training until validation scores don't improve for 50 rounds\n",
+                        "[100]\ttrain's auc: 0.816958\tvalid's auc: 0.814059\n",
+                        "[200]\ttrain's auc: 0.818322\tvalid's auc: 0.814553\n",
+                        "[300]\ttrain's auc: 0.819515\tvalid's auc: 0.814768\n",
+                        "[400]\ttrain's auc: 0.820561\tvalid's auc: 0.81483\n",
+                        "[500]\ttrain's auc: 0.821571\tvalid's auc: 0.814867\n",
+                        "[600]\ttrain's auc: 0.822509\tvalid's auc: 0.814878\n",
+                        "Early stopping, best iteration is:\n",
+                        "[552]\ttrain's auc: 0.822047\tvalid's auc: 0.814898\n",
+                        "\n",
+                        "📊 Test AUC: 0.8191\n",
+                        "🎯 上位3頭的中率: 93.1%\n",
+                        "💰 単勝回収率: 79.1%\n",
+                        "🏇 三連複的中率（5頭選択）: 37.0%\n"
+                    ]
+                }
+            ],
             "source": [
                 "result_with_odds = train_and_evaluate(train_clean, test_clean, FEATURE_COLS_WITH_ODDS, \"オッズありモデル\")"
             ]
@@ -362,9 +493,25 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "\n",
+                        "============================================================\n",
+                        "📊 モデル比較\n",
+                        "============================================================\n",
+                        "     指標  オッズなし  オッズあり\n",
+                        "    AUC 0.7600 0.8191\n",
+                        "上位3頭的中率  89.2%  93.1%\n",
+                        " 三連複的中率  28.2%  37.0%\n",
+                        "  単勝回収率  78.9%  79.1%\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(\"\\n\" + \"=\"*60)\n",
                 "print(\"📊 モデル比較\")\n",
@@ -381,9 +528,41 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 14,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "=== 特徴量重要度 (オッズなし) ===\n",
+                        "                 feature  importance\n",
+                        "         days_since_last         919\n",
+                        "        avg_last3f_last3         872\n",
+                        "trainer_cumulative_races         813\n",
+                        " jockey_cumulative_races         802\n",
+                        "       jockey_place_rate         787\n",
+                        "        trainer_win_rate         768\n",
+                        "      trainer_place_rate         750\n",
+                        "            prev_last_3f         720\n",
+                        "         jockey_win_rate         708\n",
+                        "             prev_finish         670\n",
+                        "        avg_finish_last3         647\n",
+                        "                distance         643\n",
+                        "        horse_place_rate         626\n",
+                        "          horse_win_rate         617\n",
+                        "  horse_cumulative_races         616\n",
+                        "            horse_number         568\n",
+                        "            prev2_finish         558\n",
+                        "                  impost         423\n",
+                        "            prev3_finish         418\n",
+                        "             level_score         415\n",
+                        "             gate_number         410\n",
+                        "         surface_encoded         249\n",
+                        "                is_debut           1\n"
+                    ]
+                }
+            ],
             "source": [
                 "print(\"=== 特徴量重要度 (オッズなし) ===\")\n",
                 "print(result_no_odds['importance'].to_string(index=False))"
@@ -391,9 +570,17 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 15,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "name": "stdout",
+                    "output_type": "stream",
+                    "text": [
+                        "✅ モデル保存完了\n"
+                    ]
+                }
+            ],
             "source": [
                 "import pickle\n",
                 "\n",
